# adventofcode2023

./: .gitignore  .gitmodules  README.adoc
.github/workflows/: run-task12  run-task12.yml  test-day10.yml  test-day11.yml  test-day12.yml  test-day15.yml  test-day9.yml
Day13/: day13.py  day13_task1_test.py  day13_test.py  day_13_solution_test.py
day1/: findDigits.py
day10/: CMakeLists.txt  main.cpp
day10/Google-Tests/: CMakeLists.txt  DistanceCalculatorTest.cpp  FileReaderTest.cpp  LoopTest.cpp
day10/Libraries/: CMakeLists.txt  DistanceCalculator.cpp  DistanceCalculator.h  FileReader.cpp  FileReader.h  types.h
day11/: CMakeLists.txt  main.cpp
day11/Google-Tests/: CMakeLists.txt  Task1Test.cpp  Task2Test.cpp
day11/Libraries/: CMakeLists.txt  FileReader.cpp  FileReader.h  SpaceDistanceCalculator.cpp  SpaceDistanceCalculator.h  types.h
day12/: CMakeLists.txt  main.cpp
day12/Google-Tests/: CMakeLists.txt  Task1Test.cpp  Task2Test.cpp
day14/: day14.py  day14_part2.py  day14_test.py
day15/: CMakeLists.txt  main.cpp
day15/Google-Tests/: CMakeLists.txt  Task1Test.cpp  Task2Test.cpp
day2/: findValidGames.py
day3/: code.py  gear-ratio.py
day4/: code.py  winning-cards.py
day5/: code.cpp  code.py
day6/: CMakeLists.txt  Task1_WinningCalc.cpp  Task1_WinningCalc.h  Task2_Calculations.cpp  Task2_Calculations.h  gatheringData.cpp  gatheringData.h  real_calculation.cpp  testing.cpp
day7/: CMakeLists.txt  FileReader.cpp  FileReader.h  GameEvaluator.cpp  GameEvaluator.h  main.cpp  test.cpp
day8/: CMakeLists.txt  FileReader.cpp  FileReader.h  Pathfinder.cpp  Pathfinder.h  main.cpp  test.cpp
day9/: .gitmodules  CMakeLists.txt  ExtrapolationCalculator.cpp  ExtrapolationCalculator.h  FileReader.h  day9_test.cpp  main.cpp
day9/Google-Tests/: CMakeLists.txt  ExtrapolationCalculatorTest.cpp  FileReaderTest.cpp
day9/Libraries/: CMakeLists.txt  FileReader.cpp  types.h
